adding patents and fix bug

--- a/leili.bib
+++ b/leili.bib
@@ -1,21 +1,8 @@
 % Encoding: UTF-8
 
-@InProceedings{long2021generative,
-  author    = {Long, Quanyu and Wang, Mingxuan and Li, Lei},
-  booktitle = {Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)},
-  title     = {Generative Imagination Elevates Machine Translation},
-  year      = {2021},
-  month     = jun,
-  publisher = {Association for Computational Linguistics},
-  abstract  = {There are thousands of languages on earth, but visual perception is shared among peoples. Existing multimodal neural machine translation (MNMT) methods achieve knowledge transfer by enforcing one encoder to learn shared representation across textual and visual modalities. However, the training and inference process heavily relies on well-aligned bilingual sentence - image triplets as input, which are often limited in quantity. In this paper, we hypothesize that visual imagination via synthesizing visual representation from source text could help the neural model map two languages with different symbols, thus helps the translation task. Our proposed end-to-end imagination-based machine translation model (ImagiT) first learns to generate semantic-consistent visual representation from source sentence, and then generate target sentence based on both text representation and imagined visual representation. Experiments demonstrate that our translation model benefits from visual imagination and significantly outperforms the text-only neural machine translation (NMT) baseline. We also conduct analyzing experiments, and the results show that imagination can help fill in missing information when performing the degradation strategy.},
-  eprint    = {https://arxiv.org/abs/2009.09654},
-  owner     = {lilei.02},
-  timestamp = {2021-03-11},
-}
-
 @InProceedings{wang2021auto,
   author    = {Tao Wang and Chengqi Zhao and Mingxuan Wang and Lei Li and Deyi Xiong},
-  booktitle = {Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL) - industry track},
+  booktitle = {Proceedings of the 2021 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies - industry papers (NAACL-HLT)},
   title     = {Auto Correcting in the Process of Translation -- Multi-task Learning Improves Dialogue Machine Translation},
   year      = {2021},
   month     = jun,
@@ -25,7 +12,7 @@
 
 @InProceedings{wang2021cross,
   author    = {Mingxuan Wang and Hongxiao Bai and Hai Zhao and Lei Li},
-  booktitle = {Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL) - industry track},
+  booktitle = {Proceedings of the 2021 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies - industry papers (NAACL-HLT)},
   title     = {Cross-lingual supervision improves unsupervised neural machine translation},
   year      = {2021},
   month     = jun,
@@ -35,12 +22,26 @@
 
 @InProceedings{wang2021lightseq,
   author    = {Xiaohui Wang and Ying Xiong and Yang Wei and Mingxuan Wang and Lei Li},
-  booktitle = {Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL) - industry track},
+  booktitle = {Proceedings of the 2021 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies - industry papers (NAACL-HLT)},
   title     = {{LightSeq}: A High Performance Inference Library for Transformers},
   year      = {2021},
   month     = jun,
+  code      = {https://github.com/bytedance/lightseq},
   eprint    = {https://arxiv.org/abs/2010.13887},
   owner     = {lilei.02},
+}
+
+@InProceedings{long2021generative,
+  author    = {Long, Quanyu and Wang, Mingxuan and Li, Lei},
+  booktitle = {Proceedings of the 2021 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (NAACL-HLT)},
+  title     = {Generative Imagination Elevates Machine Translation},
+  year      = {2021},
+  month     = jun,
+  publisher = {Association for Computational Linguistics},
+  abstract  = {There are thousands of languages on earth, but visual perception is shared among peoples. Existing multimodal neural machine translation (MNMT) methods achieve knowledge transfer by enforcing one encoder to learn shared representation across textual and visual modalities. However, the training and inference process heavily relies on well-aligned bilingual sentence - image triplets as input, which are often limited in quantity. In this paper, we hypothesize that visual imagination via synthesizing visual representation from source text could help the neural model map two languages with different symbols, thus helps the translation task. Our proposed end-to-end imagination-based machine translation model (ImagiT) first learns to generate semantic-consistent visual representation from source sentence, and then generate target sentence based on both text representation and imagined visual representation. Experiments demonstrate that our translation model benefits from visual imagination and significantly outperforms the text-only neural machine translation (NMT) baseline. We also conduct analyzing experiments, and the results show that imagination can help fill in missing information when performing the degradation strategy.},
+  eprint    = {https://arxiv.org/abs/2009.09654},
+  owner     = {lilei.02},
+  timestamp = {2021-03-11},
 }
 
 @InProceedings{chen2021scale,
@@ -92,9 +93,26 @@
   month     = may,
   abstract  = {Searching for novel molecules with desired chemical properties is crucial in drug discovery.  Existing work focuses on developing deep generative models to generate either sequences or chemical molecular graphs. However, it remains a great challenge to find novel and diverse compounds satisfying many properties. In this paper, we propose MARS, a method for multi-objective drug molecule discovery. MARS is based on the idea of generating the chemical candidates by iterative editing fragments of molecular graphs. To search for the best candidates, it employs an annealing scheme together with Markov chain Monte Carlo sampling (MCMC) on molecules. To further improve sample efficiency, MARS is equipped with a graph neural network (GNN) as the proposal for candidate edits on molecules, while the GNN is trained on-the-fly utilizing the sample paths in MCMC. Our experiments show that MARS achieves state-of-the-art performance in various multi-objective settings where molecular bio-activity, drug-likeness, and synthesizability are simultaneously considered.  In the most challenging setting where four objectives – bio-activities to two different targets, drug-likeness and synthesizability – are simultaneously considered, our method outperforms the state-of-the-art significantly in a comprehensive evaluation.},
   addendum  = {Spotlight, 5.6\% acceptance rate},
+  code      = {https://github.com/yutxie/mars},
   eprint    = {https://openreview.net/forum?id=kHSu4ebxFXY},
   owner     = {lilei.02},
   thumbnail = {xie2021mars_molecule_editing.jpg},
+}
+
+@Patent{li2021target,
+  nationality = {CN},
+  number      = {201811010095.X},
+  year        = {2021},
+  yearfiled   = {2018},
+  assignee    = {Beijing Bytedance Network Tech Co. Ltd},
+  author      = {Li, Gen and Xu, Shikun and Zhu, Yandong and Li, Lei and Wang, Changhu},
+  day         = {8},
+  dayfiled    = {31},
+  month       = may,
+  monthfiled  = aug,
+  title       = {Target Object Image Detection Method and Device},
+  comment     = {目标对象的图像确定方法、装置、设备及存储介质},
+  owner       = {lilei.02},
 }
 
 @InProceedings{wang2021enpar,
@@ -104,6 +122,61 @@
   year      = {2021},
   month     = apr,
   owner     = {lilei.02},
+}
+
+@Patent{chen2021methoda,
+  nationality = {US},
+  number      = {16/981,240},
+  year        = {2021},
+  yearfiled   = {2018},
+  author      = {Chen, Yangyu and He, Yi and Li, Lei},
+  day         = {20},
+  month       = apr,
+  title       = {Method and Device for determining geometric transformation relation for images},
+}
+
+@Patent{he2021image,
+  nationality = {CN},
+  number      = {201910498629.6},
+  year        = {2021},
+  yearfiled   = {2019},
+  author      = {He, Yi and Li, Gen and Li, Lei},
+  day         = {29},
+  dayfiled    = {10},
+  month       = apr,
+  monthfiled  = jun,
+  title       = {Image processing method and device},
+  comment     = {图像处理方法、装置、电子设备及计算机可读存储介质(一种概率的图片哈希表达方法)},
+}
+
+@Patent{huang2021target,
+  nationality = {CN},
+  number      = {202010057296.6},
+  year        = {2021},
+  yearfiled   = {2020},
+  author      = {Huang, Xunpeng and Liu, Zhengyang and Li, Lei},
+  day         = {20},
+  dayfiled    = {17},
+  month       = apr,
+  monthfiled  = jan,
+  title       = {Target Object Classification method and device},
+  comment     = {目标对象的分类方法、装置和电子设备( 一种快速的近似二阶牛顿优化算法 )},
+}
+
+@Patent{li2021method,
+  nationality = {CN},
+  number      = {201811455645.9},
+  year        = {2021},
+  yearfiled   = {2019},
+  assignee    = {Beijing Bytedance Tech Co. Ltd},
+  author      = {Li, Lei and Chen, Jiaze and Chen, Jiamin and Ma, Weiying and Hua, Lifeng},
+  day         = {13},
+  dayfiled    = {1},
+  month       = apr,
+  monthfiled  = feb,
+  title       = {Method and Device for generating information},
+  comment     = {用于处理文本的方法和装置},
+  owner       = {lilei.02},
 }
 
 @InProceedings{song2021triangular,
@@ -116,6 +189,20 @@
   eprint    = {https://arxiv.org/abs/2101.11349},
   owner     = {lilei.02},
   thumbnail = {song2021triangular_search_bidding_example.jpg},
+}
+
+@Patent{she2021method,
+  nationality = {CN},
+  number      = {201811562666.0},
+  year        = {2021},
+  yearfiled   = {2018},
+  author      = {She, Heng and Wang, Yang and Guo, Yinuo and Zhang, Huiru and Li, Yitan and Li, Lei and Li, Hang},
+  day         = {19},
+  dayfiled    = {18},
+  month       = mar,
+  monthfiled  = dec,
+  title       = {Method and Device for Push-Notifying Information},
+  comment     = {用于推送信息的方法和装置},
 }
 
 @InProceedings{dong2021consecutive,
@@ -187,6 +274,52 @@ Such new perspective leads to a refreshed understanding of the roles of second m
   eprint    = {https://arxiv.org/abs/2101.01896},
   owner     = {lilei.02},
   thumbnail = {zhang2021taxonomy_completion_task.svg},
+}
+
+@Patent{chen2021method,
+  nationality = {CN},
+  number      = {201811457980.2},
+  year        = {2021},
+  yearfiled   = {2018},
+  author      = {Chen, Jiaze and Li, Lei and Zeng, Ying and Ma, Weiying},
+  day         = {29},
+  dayfiled    = {2},
+  month       = jan,
+  monthfiled  = nov,
+  title       = {Method and Device for generation product description information},
+  comment     = {生成物品描述信息的方法和装置},
+}
+
+@Patent{deng2021method,
+  nationality = {CN},
+  number      = {201810910344.4},
+  year        = {2021},
+  yearfiled   = {2018},
+  assignee    = {Beijing Bytedance Network Tech Co. Ltd},
+  author      = {Deng, Jiangdong and Li, Lei and Ma, Weiying},
+  day         = {1},
+  dayfiled    = {10},
+  month       = jan,
+  monthfiled  = aug,
+  title       = {Method and device for stock selection},
+  comment     = {股票的筛选方法及装置、计算机设备及可读存储介质},
+  owner       = {lilei.02},
+}
+
+@Patent{he2021duplicate,
+  nationality = {China},
+  number      = {201810273706.3},
+  year        = {2021},
+  yearfiled   = {2018},
+  assignee    = {Beijing Bytedance Network Tech Co.},
+  author      = {He, Yi and Yang, Cheng and Li, Gen and Li, Yitan and Li, Lei},
+  day         = {19},
+  dayfiled    = {29},
+  month       = jan,
+  monthfiled  = mar,
+  title       = {Duplicate video detection method and device},
+  comment     = {一种重复视频的判断方法及装置},
+  owner       = {lilei.02},
 }
 
 @InProceedings{wang2020solov2,
@@ -288,7 +421,7 @@ Such new perspective leads to a refreshed understanding of the roles of second m
 
 @Patent{deng2020sentiment,
   nationality = {China},
-  number      = {CN109087205B},
+  number      = {201810909879.X},
   year        = {2020},
   yearfiled   = {2018},
   author      = {Jiangdong Deng and Lei Li and Weiying Ma},
@@ -373,6 +506,38 @@ Such new perspective leads to a refreshed understanding of the roles of second m
   url          = {https://xiaomingbot.github.io},
 }
 
+@Patent{he2020method,
+  nationality = {China},
+  number      = {201810271774.6},
+  year        = {2020},
+  yearfiled   = {2018},
+  assignee    = {Beijing Bytedance Network Tech Co.},
+  author      = {He, Yi and Li, Lei and Yang, Cheng and Li, Gen and Li, Yitan},
+  day         = {7},
+  dayfiled    = {29},
+  month       = jul,
+  monthfiled  = oct,
+  title       = {A Method and Device for Video Feature Extraction},
+  comment     = {一种视频特征提取方法及装置},
+  owner       = {lilei.02},
+}
+
+@Patent{zhou2020machine,
+  nationality = {CN},
+  number      = {201910105606.4},
+  year        = {2020},
+  yearfiled   = {2019},
+  assignee    = {Beijing Bytedance Tech Co. Ltd},
+  author      = {Zhou, Hao and Li, Lei},
+  day         = {10},
+  dayfiled    = {1},
+  month       = jul,
+  monthfiled  = feb,
+  title       = {Machine Translation Method and Device},
+  comment     = {机器翻译方法和装置},
+  owner       = {lilei.02},
+}
+
 @InProceedings{hua2020xref,
   author    = {Xinyu Hua and Lei Li and Lifeng Hua and Lu Wang},
   booktitle = {Automated Knowledge Base Construction (AKBC)},
@@ -423,6 +588,23 @@ Such new perspective leads to a refreshed understanding of the roles of second m
   month       = may,
   monthfiled  = dec,
   title       = {Video Feature Extraction Method and Device},
+  comment     = {一种视频特征提取方法及装置},
+  owner       = {lilei.02},
+}
+
+@Patent{zhou2020method,
+  nationality = {CN},
+  number      = {201910105002.X},
+  year        = {2020},
+  yearfiled   = {2019},
+  assignee    = {Beijing Bytedance Tech Co. Ltd},
+  author      = {Zhou, Hao and Li, Lei and Miao, Ning},
+  day         = {22},
+  dayfiled    = {1},
+  month       = may,
+  monthfiled  = feb,
+  title       = {Method and Device for Generating Text},
+  comment     = {用于生成文本的方法和装置},
   owner       = {lilei.02},
 }
 
@@ -451,6 +633,38 @@ Such new perspective leads to a refreshed understanding of the roles of second m
   video     = {https://iclr.cc/virtual_2020/poster_HkxQRTNYPH.html},
 }
 
+@Patent{li2020target,
+  nationality = {CN},
+  number      = {201811010092.6},
+  year        = {2020},
+  yearfiled   = {2018},
+  assignee    = {Beijing Bytedance Network Tech Co. Ltd},
+  author      = {Li, Gen and Xu, Shikun and Zhu, Yandong and Li, Lei and Wang, Changhu},
+  day         = {24},
+  dayfiled    = {31},
+  month       = apr,
+  monthfiled  = aug,
+  title       = {Target Object Image Detection Method and Device},
+  comment     = {目标对象的图像确定方法、装置、设备及存储介质},
+  owner       = {lilei.02},
+}
+
+@Patent{yu2020method,
+  nationality = {CN},
+  number      = {201810668219.7},
+  year        = {2020},
+  yearfiled   = {2018},
+  assignee    = {Beijing Bytedance Tech Co. Ltd},
+  author      = {Yu, Linyun and Li, Lei and Yin, Haibin and Zhu, Wenjia and Jiang, Dong},
+  day         = {28},
+  dayfiled    = {26},
+  month       = apr,
+  monthfiled  = jun,
+  title       = {Method and Apparatus for generating image},
+  comment     = {用于生成图像的方法和装置},
+  owner       = {lilei.02},
+}
+
 @Patent{deng2020method,
   nationality = {CN},
   number      = {201811074033.5},
@@ -462,7 +676,8 @@ Such new perspective leads to a refreshed understanding of the roles of second m
   dayfiled    = {4},
   month       = mar,
   monthfiled  = sep,
-  title       = {A method for producing information},
+  title       = {A method for outputing information},
+  comment     = {用于输出信息的方法和装置},
   owner       = {lilei.02},
 }
 
@@ -478,6 +693,38 @@ Such new perspective leads to a refreshed understanding of the roles of second m
   month       = mar,
   monthfiled  = may,
   title       = {Systems and methods for human inspired simple question answering (HISQA)},
+  owner       = {lilei.02},
+}
+
+@Patent{zhou2020methoda,
+  nationality = {CN},
+  number      = {201910105241.5},
+  year        = {2020},
+  yearfiled   = {2019},
+  assignee    = {Beijing Bytedance Tech Co. Ltd},
+  author      = {Zhou, Hao and Li, Lei and Chen, Jiaze and Shi, Haoyue},
+  day         = {31},
+  dayfiled    = {1},
+  month       = mar,
+  monthfiled  = feb,
+  title       = {Method and Device for generating information},
+  comment     = {用于生成信息的方法和装置},
+  owner       = {lilei.02},
+}
+
+@Patent{zhou2020methodb,
+  nationality = {CN},
+  number      = {201910105235.X},
+  year        = {2020},
+  yearfiled   = {2019},
+  assignee    = {Beijing Bytedance Tech Co. Ltd},
+  author      = {Zhou, Hao and Li, Lei},
+  day         = {17},
+  dayfiled    = {1},
+  month       = mar,
+  monthfiled  = feb,
+  title       = {Method and Device for generating information},
+  comment     = {用于生成信息的方法和装置},
   owner       = {lilei.02},
 }
 
@@ -525,18 +772,35 @@ to 3 BLEU score on the WMT14 English-German language pair which even surpasses t
   eprint    = {https://arxiv.org/abs/1908.05672},
 }
 
-@Patent{yu2020method,
+@Patent{he2020methoda,
   nationality = {CN},
-  number      = {201810668219.7},
+  number      = {201811060981.3},
+  year        = {2020},
+  yearfiled   = {2018},
+  assignee    = {Beijing Bytedance Network Tech Co. Ltd},
+  author      = {He, Yi and Li, Lei and Zong, Xianzi and Tang, Hao and Zheng, Guangguo},
+  day         = {4},
+  dayfiled    = {12},
+  month       = jan,
+  monthfiled  = sep,
+  title       = {Method and Device for searching information},
+  comment     = {用于搜索信息的方法和装置},
+  owner       = {lilei.02},
+}
+
+@Patent{yu2020methoda,
+  nationality = {CN},
+  number      = {201810669838.8},
   year        = {2020},
   yearfiled   = {2018},
   assignee    = {Beijing Bytedance Tech Co. Ltd},
-  author      = {Yu, Linyun and Li, Lei and Yin, Haibin and Zhu, Wenjia and Jiang, Dong},
+  author      = {Yu, Linyun and Li, Lei and Yin, Haibin and Jiang, Dong},
   day         = {7},
   dayfiled    = {26},
   month       = jan,
   monthfiled  = jun,
-  title       = {Method and Apparatus for generating image},
+  title       = {Method and apparatus for generating image},
+  comment     = {用于生成图像的方法和装置},
   owner       = {lilei.02},
 }
 
@@ -583,6 +847,7 @@ robust to rare sentence context by imposing learned kernels to capture the close
   month       = nov,
   monthfiled  = sep,
   title       = {A method and apparatus for determining a geometric transformation relationship between images},
+  comment     = {用于确定图像间的几何变换关系的方法和装置},
   owner       = {lilei.02},
 }
 
@@ -710,81 +975,6 @@ resolve word dependencies in novel sentences.},
   file      = {:pubs/wu-cvpr2019-vse.pdf:PDF},
 }
 
-@Patent{zhou2019machine,
-  nationality = {CN},
-  number      = {201910105606.4},
-  year        = {2019},
-  yearfiled   = {2019},
-  assignee    = {Beijing Bytedance Tech Co. Ltd},
-  author      = {Zhou, Hao and Li, Lei},
-  day         = {7},
-  dayfiled    = {1},
-  month       = jun,
-  monthfiled  = feb,
-  title       = {Machine Translation Method and Device},
-  owner       = {lilei.02},
-}
-
-@Patent{he2019method,
-  nationality = {China},
-  number      = {201810271774.6},
-  year        = {2019},
-  yearfiled   = {2018},
-  assignee    = {Beijing Bytedance Network Tech Co.},
-  author      = {He, Yi and Li, Lei and Yang, Cheng and Li, Gen and Li, Yitan},
-  day         = {11},
-  dayfiled    = {29},
-  month       = may,
-  monthfiled  = oct,
-  title       = {A Method and Device for Video Feature Extraction},
-  owner       = {lilei.02},
-}
-
-@Patent{zhou2019method,
-  nationality = {CN},
-  number      = {201910105002.X},
-  year        = {2019},
-  yearfiled   = {2019},
-  assignee    = {Beijing Bytedance Tech Co. Ltd},
-  author      = {Zhou, Hao and Li, Lei and Miao, Ning},
-  day         = {31},
-  dayfiled    = {1},
-  month       = may,
-  monthfiled  = feb,
-  title       = {Method and Device for Generating Text},
-  owner       = {lilei.02},
-}
-
-@Patent{zhou2019methoda,
-  nationality = {CN},
-  number      = {201910105235.X},
-  year        = {2019},
-  yearfiled   = {2019},
-  assignee    = {Beijing Bytedance Tech Co. Ltd},
-  author      = {Zhou, Hao and Li, Lei and Chen, Jiaze and Shi, Haoyue},
-  day         = {24},
-  dayfiled    = {1},
-  month       = may,
-  monthfiled  = feb,
-  title       = {Method and Device for generating information},
-  owner       = {lilei.02},
-}
-
-@Patent{zhou2019methodb,
-  nationality = {CN},
-  number      = {201910105235.X},
-  year        = {2019},
-  yearfiled   = {2019},
-  assignee    = {Beijing Bytedance Tech Co. Ltd},
-  author      = {Zhou, Hao and Li, Lei},
-  day         = {10},
-  dayfiled    = {1},
-  month       = may,
-  monthfiled  = feb,
-  title       = {Method and Device for generating information},
-  owner       = {lilei.02},
-}
-
 @Patent{jiang2019construction,
   nationality = {CN},
   number      = {201710388497.2},
@@ -797,21 +987,7 @@ resolve word dependencies in novel sentences.},
   month       = mar,
   monthfiled  = may,
   title       = {Construction method and device of voice classification model.},
-  owner       = {lilei.02},
-}
-
-@Patent{he2019methoda,
-  nationality = {CN},
-  number      = {201811060981.3},
-  year        = {2019},
-  yearfiled   = {2018},
-  assignee    = {Beijing Bytedance Network Tech Co. Ltd},
-  author      = {He, Yi and Li, Lei and Zong, Xianzi and Tang, Hao and Zheng, Guangguo},
-  day         = {5},
-  dayfiled    = {12},
-  month       = feb,
-  monthfiled  = sep,
-  title       = {Method and Device for searching information},
+  comment     = {一种语音分类模型的构建方法及装置},
   owner       = {lilei.02},
 }
 
@@ -847,21 +1023,6 @@ is released at https://github.com/NingMiao/CGMH},
   slides    = {pubs/miao2019cgmh-ppt.pdf},
 }
 
-@Patent{li2019target,
-  nationality = {CN},
-  number      = {201811010092.6},
-  year        = {2019},
-  yearfiled   = {2018},
-  assignee    = {Beijing Bytedance Network Tech Co. Ltd},
-  author      = {Li, Gen and Xu, Shikun and Zhu, Yandong and Li, Lei and Wang, Changhu},
-  day         = {31},
-  dayfiled    = {4},
-  month       = jan,
-  monthfiled  = aug,
-  title       = {Target Object Image Detection Method and Device},
-  owner       = {lilei.02},
-}
-
 @InProceedings{cao2018brits,
   author    = {Cao, Wei and Wang, Dong and Li, Jian and Zhou, Hao and Li, Yitan and Li, Lei},
   booktitle = {the 32nd Conference on Neural Information Processing Systems (NeurIPS)},
@@ -871,21 +1032,6 @@ is released at https://github.com/NingMiao/CGMH},
   abstract  = {Time series are widely used as signals in many classification/regression tasks. It is ubiquitous that time series contains many missing values. Given multiple correlated time series data, how to fill in missing values and to predict their class labels? Existing imputation methods often impose strong assumptions of the underlying data generating process, such as linear dynamics in the state space. In this paper, we propose BRITS, a novel method based on recurrent neural networks for missing value imputation in time series data. Our proposed method directly learns the missing values in a bidirectional recurrent dynamical system, without any specific assumption. The imputed values are treated as variables of RNN graph and can be effectively updated during the backpropagation.BRITS has three advantages: (a) it can handle multiple correlated missing values in time series; (b) it generalizes to time series with nonlinear dynamics underlying; (c) it provides a data-driven imputation procedure and applies to general settings with missing data.We evaluate our model on three real-world datasets, including an air quality dataset, a health-care data, and a localization data for human activity. Experiments show that our model outperforms the state-of-the-art methods in both imputation and classification/regression accuracies.},
   code      = {https://github.com/caow13/BRITS},
   url       = {https://arxiv.org/abs/1805.10572},
-}
-
-@Patent{yu2018method,
-  nationality = {CN},
-  number      = {201810669838.8},
-  year        = {2018},
-  yearfiled   = {2018},
-  assignee    = {Beijing Bytedance Tech Co. Ltd},
-  author      = {Yu, Linyun and Li, Lei and Yin, Haibin and Jiang, Dong},
-  day         = {30},
-  dayfiled    = {26},
-  month       = nov,
-  monthfiled  = jun,
-  title       = {Method and apparatus for generating image},
-  owner       = {lilei.02},
 }
 
 @InProceedings{shi2018tree,
