--- a/leili.bib
+++ b/leili.bib
@@ -1,47 +1,189 @@
 % Encoding: UTF-8
 
-@InProceedings{wang2021auto,
-  author    = {Tao Wang and Chengqi Zhao and Mingxuan Wang and Lei Li and Deyi Xiong},
-  booktitle = {Proceedings of the 2021 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies - industry papers (NAACL-HLT)},
-  title     = {Auto Correcting in the Process of Translation -- Multi-task Learning Improves Dialogue Machine Translation},
+@InProceedings{lin2021learning,
+  author    = {Zehui Lin and Liwei Wu and Mingxuan Wang and Lei Li},
+  booktitle = {the 59th Annual Meeting of the Association for Computational Linguistics (ACL)},
+  title     = {Learning Language Specific Sub-network for Multilingual Machine Translation},
   year      = {2021},
+  month     = aug,
+  abstract  = {Multilingual neural machine translation aimsat learning a single translation model for muliple  languages.  These  jointly  trained  mod-els often suffer from performance degradationon rich-resource language pairs. We attributethis degeneration to parameter interference. Inthis paper, we propose LaSS to jointly train asingle  unified  multilingual  MT  model.  LaSS learns Language Secific Sub-network (LaSS)for  each  language  pair  to  counter  parameterinterference.  Comprehensive  experiments  on IWSLT and WMT datasets with various Transformer  architectures  show  that  LaSS  obtainsgains on 36 language pairs by up to 1.2 BLEU.Besides, LaSS shows its strong generalization performance  at  easy  adaptation  to  new  lan-guage  pairs  and  zero-shot  translation.  LaSS boosts  zero-shot  translation  with  an  averageof  8.3  BLEU  on  30  language  pairs.},
+  code      = {https://github.com/NLP-Playground/LaSS},
+  eprint    = {https://arxiv.org/abs/2105.09259},
+  timestamp = {2020-05-01},
+}
+
+@InProceedings{pan2021contrastive,
+  author    = {Xiao Pan and Liwei Wu and Mingxuan Wang and Lei Li},
+  booktitle = {the 59th Annual Meeting of the Association for Computational Linguistics (ACL)},
+  title     = {Contrastive Learning for Many-to-many Multilingual Neural Machine Translation},
+  year      = {2021},
+  month     = aug,
+  code      = {https://github.com/PANXiao1994/mRASP2},
+  eprint    = {https://arxiv.org/abs/2105.09501},
+  timestamp = {2020-05-01},
+}
+
+@InProceedings{qian2021glancing,
+  author    = {Lihua Qian and Hao Zhou and Yu Bao and Mingxuan Wang and Lin Qiu and Weinan Zhang and Yong Yu and Lei Li},
+  booktitle = {the 59th Annual Meeting of the Association for Computational Linguistics (ACL)},
+  title     = {Glancing Transformer for Non-Autoregressive Neural Machine Translation},
+  year      = {2021},
+  month     = aug,
+  eprint    = {https://arxiv.org/abs/2008.07905},
+  timestamp = {2020-05-01},
+}
+
+@InProceedings{wang2021unire,
+  author    = {Yijun Wang and Changzhi Sun and Yuanbin Wu and Hao Zhou and Lei Li and Junchi Yan},
+  booktitle = {the 59th Annual Meeting of the Association for Computational Linguistics (ACL)},
+  title     = {UniRE: A Unified Label Space for Entity Relation Extraction},
+  year      = {2021},
+  month     = aug,
+  timestamp = {2020-05-01},
+}
+
+@InProceedings{xu2021document,
+  author    = {Runxin Xu and Tianyu Liu and Lei Li and Baobao Chang},
+  booktitle = {the 59th Annual Meeting of the Association for Computational Linguistics (ACL)},
+  title     = {Document-level Event Extraction via Heterogeneous Graph-based Interaction Model with a Tracker},
+  year      = {2021},
+  month     = aug,
+  code      = {https://github.com/RunxinXu/GIT},
+  eprint    = {https://arxiv.org/abs/2105.14924},
+  timestamp = {2020-05-01},
+}
+
+@InProceedings{xu2021vocabulary,
+  author    = {Jingjing Xu and Hao Zhou and Chun Gan and Zaixiang Zheng and Lei Li},
+  booktitle = {the 59th Annual Meeting of the Association for Computational Linguistics (ACL)},
+  title     = {Vocabulary Learning via Optimal Transport for Neural Machine Translation},
+  year      = {2021},
+  month     = aug,
+  code      = {https://github.com/Jingjing-NLP/VOLT},
+  eprint    = {https://arxiv.org/abs/2012.15671},
+  timestamp = {2020-05-01},
+}
+
+@InProceedings{han2021learning,
+  author    = {Chi Han and Mingxuan Wang and Heng Ji and Lei Li},
+  booktitle = {the 59th Annual Meeting of the Association for Computational Linguistics (ACL) - Findings},
+  title     = {Learning Shared Semantic Space for Speech-to-Text Translation},
+  year      = {2021},
+  month     = aug,
+  code      = {https://github.com/Glaciohound/Chimera-ST},
+  eprint    = {https://arxiv.org/abs/2105.03095},
+  timestamp = {2020-05-01},
+}
+
+@InProceedings{sun2021probabilistic,
+  author    = {Changzhi Sun and Xinbo Zhang and Jiangjie Chen and Chun Gan and Yuanbin Wu and Jiaze Chen and Hao Zhou and Lei Li},
+  booktitle = {the 59th Annual Meeting of the Association for Computational Linguistics (ACL) - Findings},
+  title     = {Probabilistic Graph Reasoning for Natural Proof Generation},
+  year      = {2021},
+  month     = aug,
+  code      = {https://github.com/changzhisun/PRobr/},
+  timestamp = {2020-05-01},
+}
+
+@InProceedings{wang2021contrastive,
+  author    = {Danqing Wang and Jiaze Chen and Hao Zhou and Xipeng Qiu and Lei Li},
+  booktitle = {the 59th Annual Meeting of the Association for Computational Linguistics (ACL) - Findings},
+  title     = {Contrastive Aligned Joint Learning for Multilingual Summarization},
+  year      = {2021},
+  month     = aug,
+  timestamp = {2020-05-01},
+}
+
+@InProceedings{wu2021language,
+  author    = {Liwei Wu and Shanbo Chen and Mingxuan Wang and Lei Li},
+  booktitle = {the 59th Annual Meeting of the Association for Computational Linguistics (ACL) - short papers},
+  title     = {Language Tags Matter for Zero-Shot Neural Machine Translation},
+  year      = {2021},
+  month     = aug,
+  timestamp = {2020-05-01},
+}
+
+@InProceedings{zhao2021neurst,
+  author    = {Chengqi Zhao and Mingxuan Wang and Qianqian Dong and Rong Ye and Lei Li},
+  booktitle = {the 59th Annual Meeting of the Association for Computational Linguistics (ACL): System Demonstrations},
+  title     = {{NeurST}: Neural Speech Translation Toolkit},
+  year      = {2021},
+  month     = aug,
+  code      = {https://github.com/bytedance/neurst},
+  eprint    = {https://arxiv.org/abs/2012.10018},
+  timestamp = {2020-05-01},
+}
+
+@InProceedings{jing2021adversarial,
+  author    = {Mingxuan Jing and Wenbing Huang and Fuchun Sun and Xiaojian Ma and Tao Kong and Chuang Gan and Lei Li},
+  booktitle = {Proceedings of the 38th International Conference on Machine Learning (ICML)},
+  title     = {Adversarial Option-Aware Hierarchical Imitation Learning},
+  year      = {2021},
+  month     = jul,
+}
+
+@InProceedings{long2021generative,
+  title = "Generative Imagination Elevates Machine Translation",
+    author = "Long, Quanyu  and
+      Wang, Mingxuan  and
+      Li, Lei",
+    booktitle = "Proceedings of the 2021 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (NAACL-HLT)",
+    month = jun,
+    year = "2021",
+    address = "Online",
+    publisher = "Association for Computational Linguistics",
+    pages = "5738--5748",
+    abstract = "There are common semantics shared across text and images. Given a sentence in a source language, whether depicting the visual scene helps translation into a target language? Existing multimodal neural machine translation methods (MNMT) require triplets of bilingual sentence - image for training and tuples of source sentence - image for inference. In this paper, we propose ImagiT, a novel machine translation method via visual imagination. ImagiT first learns to generate visual representation from the source sentence, and then utilizes both source sentence and the {``}imagined representation{''} to produce a target translation. Unlike previous methods, it only needs the source sentence at the inference time. Experiments demonstrate that ImagiT benefits from visual imagination and significantly outperforms the text-only neural machine translation baselines. Further analysis reveals that the imagination process in ImagiT helps fill in missing information when performing the degradation strategy.",
+  eprint    = {https://arxiv.org/abs/2009.09654},
+  owner     = {lilei.02},
+  timestamp = {2021-03-11},
+}
+
+@InProceedings{wang2021auto,
+  author    = {Wang, Tao and Zhao, Chengqi and Wang, Mingxuan and Li, Lei and Xiong, Deyi},
+  booktitle = {Proceedings of the 2021 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies: Industry Papers (NAACL-HLT)},
+  title     = {Autocorrect in the Process of Translation {---} Multi-task Learning Improves Dialogue Machine Translation},
+  year      = {2021},
+  address   = {Online},
   month     = jun,
+  pages     = {105--112},
+  publisher = {Association for Computational Linguistics},
+  abstract  = {Automatic translation of dialogue texts is a much needed demand in many real life scenarios. However, the currently existing neural machine translation delivers unsatisfying results. In this paper, we conduct a deep analysis of a dialogue corpus and summarize three major issues on dialogue translation, including pronoun dropping (), punctuation dropping (), and typos (). In response to these challenges, we propose a joint learning method to identify omission and typo, and utilize context to translate dialogue utterances. To properly evaluate the performance, we propose a manually annotated dataset with 1,931 Chinese-English parallel utterances from 300 dialogues as a benchmark testbed for dialogue translation. Our experiments show that the proposed method improves translation quality by 3.2 BLEU over the baselines. It also elevates the recovery rate of omitted pronouns from 26.09{\%} to 47.16{\%}.},
   eprint    = {https://arxiv.org/abs/2103.16189},
   owner     = {lilei.02},
 }
 
 @InProceedings{wang2021cross,
-  author    = {Mingxuan Wang and Hongxiao Bai and Hai Zhao and Lei Li},
-  booktitle = {Proceedings of the 2021 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies - industry papers (NAACL-HLT)},
-  title     = {Cross-lingual supervision improves unsupervised neural machine translation},
+  author    = {Wang, Mingxuan and Bai, Hongxiao and Zhao, Hai and Li, Lei},
+  booktitle = {Proceedings of the 2021 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies: Industry Papers (NAACL-HLT)},
+  title     = {Cross-lingual Supervision Improves Unsupervised Neural Machine Translation},
   year      = {2021},
+  address   = {Online},
   month     = jun,
+  pages     = {89--96},
+  publisher = {Association for Computational Linguistics},
+  abstract  = {We propose to improve unsupervised neural machine translation with cross-lingual supervision (), which utilizes supervision signals from high resource language pairs to improve the translation of zero-source languages. Specifically, for training En-Ro system without parallel corpus, we can leverage the corpus from En-Fr and En-De to collectively train the translation from one language into many languages under one model. {\%} is based on multilingual models which require no changes to the standard unsupervised NMT. Simple and effective, significantly improves the translation quality with a big margin in the benchmark unsupervised translation tasks, and even achieves comparable performance to supervised NMT. In particular, on WMT{'}14 -tasks achieves 37.6 and 35.18 BLEU score, which is very close to the large scale supervised setting and on WMT{'}16 -tasks achieves 35.09 BLEU score which is even better than the supervised Transformer baseline.},
   eprint    = {https://arxiv.org/abs/2004.03137},
   owner     = {lilei.02},
 }
 
 @InProceedings{wang2021lightseq,
-  author    = {Xiaohui Wang and Ying Xiong and Yang Wei and Mingxuan Wang and Lei Li},
-  booktitle = {Proceedings of the 2021 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies - industry papers (NAACL-HLT)},
-  title     = {{LightSeq}: A High Performance Inference Library for Transformers},
-  year      = {2021},
-  month     = jun,
+  title = "{L}ight{S}eq: A High Performance Inference Library for Transformers",
+    author = "Wang, Xiaohui  and
+      Xiong, Ying  and
+      Wei, Yang  and
+      Wang, Mingxuan  and
+      Li, Lei",
+    booktitle = "Proceedings of the 2021 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies: Industry Papers (NAACL-HLT)",
+    month = jun,
+    year = "2021",
+    address = "Online",
+    publisher = "Association for Computational Linguistics",
+    pages = "113--120",
+    abstract = "Transformer and its variants have achieved great success in natural language processing. Since Transformer models are huge in size, serving these models is a challenge for real industrial applications. In this paper, we propose , a highly efficient inference library for models in the Transformer family. includes a series of GPU optimization techniques to both streamline the computation of Transformer layers and reduce memory footprint. supports models trained using PyTorch and Tensorflow. Experimental results on standard machine translation benchmarks show that achieves up to 14x speedup compared with TensorFlow and 1.4x speedup compared with , a concurrent CUDA implementation. The code will be released publicly after the review.",
   code      = {https://github.com/bytedance/lightseq},
   eprint    = {https://arxiv.org/abs/2010.13887},
   owner     = {lilei.02},
-}
-
-@InProceedings{long2021generative,
-  author    = {Long, Quanyu and Wang, Mingxuan and Li, Lei},
-  booktitle = {Proceedings of the 2021 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (NAACL-HLT)},
-  title     = {Generative Imagination Elevates Machine Translation},
-  year      = {2021},
-  month     = jun,
-  publisher = {Association for Computational Linguistics},
-  abstract  = {There are thousands of languages on earth, but visual perception is shared among peoples. Existing multimodal neural machine translation (MNMT) methods achieve knowledge transfer by enforcing one encoder to learn shared representation across textual and visual modalities. However, the training and inference process heavily relies on well-aligned bilingual sentence - image triplets as input, which are often limited in quantity. In this paper, we hypothesize that visual imagination via synthesizing visual representation from source text could help the neural model map two languages with different symbols, thus helps the translation task. Our proposed end-to-end imagination-based machine translation model (ImagiT) first learns to generate semantic-consistent visual representation from source sentence, and then generate target sentence based on both text representation and imagined visual representation. Experiments demonstrate that our translation model benefits from visual imagination and significantly outperforms the text-only neural machine translation (NMT) baseline. We also conduct analyzing experiments, and the results show that imagination can help fill in missing information when performing the degradation strategy.},
-  eprint    = {https://arxiv.org/abs/2009.09654},
-  owner     = {lilei.02},
-  timestamp = {2021-03-11},
 }
 
 @InProceedings{chen2021scale,
