--- a/leili.bib
+++ b/leili.bib
@@ -96,7 +96,7 @@
 
 @InProceedings{wu2021language,
   author    = {Liwei Wu and Shanbo Chen and Mingxuan Wang and Lei Li},
-  booktitle = {the 59th Annual Meeting of the Association for Computational Linguistics (ACL) - short papers},
+  booktitle = {the 59th Annual Meeting of the Association for Computational Linguistics (ACL) - Findings},
   title     = {Language Tags Matter for Zero-Shot Neural Machine Translation},
   year      = {2021},
   month     = aug,
@@ -104,14 +104,15 @@
 }
 
 @InProceedings{zhao2021neurst,
-  author    = {Chengqi Zhao and Mingxuan Wang and Qianqian Dong and Rong Ye and Lei Li},
-  booktitle = {the 59th Annual Meeting of the Association for Computational Linguistics (ACL): System Demonstrations},
-  title     = {{NeurST}: Neural Speech Translation Toolkit},
-  year      = {2021},
-  month     = aug,
-  code      = {https://github.com/bytedance/neurst},
-  eprint    = {https://arxiv.org/abs/2012.10018},
-  timestamp = {2020-05-01},
+  author       = {Chengqi Zhao and Mingxuan Wang and Qianqian Dong and Rong Ye and Lei Li},
+  booktitle    = {the 59th Annual Meeting of the Association for Computational Linguistics (ACL): System Demonstrations},
+  title        = {{NeurST}: Neural Speech Translation Toolkit},
+  year         = {2021},
+  month        = aug,
+  code         = {https://github.com/bytedance/neurst},
+  entrysubtype = {demo},
+  eprint       = {https://arxiv.org/abs/2012.10018},
+  timestamp    = {2020-05-01},
 }
 
 @InProceedings{jing2021adversarial,
