--- a/leili.bib
+++ b/leili.bib
@@ -1,5 +1,14 @@
 % Encoding: UTF-8
 
+@InProceedings{ye2021end,
+  author    = {Rong Ye and Mingxuan Wang and Lei Li},
+  booktitle = {Proc. of INTERSPEECH},
+  title     = {End-to-end Speech Translation via Cross-modal Progressive Training},
+  year      = {2021},
+  month     = aug,
+  eprint    = {https://arxiv.org/abs/2104.10380},
+}
+
 @InProceedings{lin2021learning,
   author    = {Zehui Lin and Liwei Wu and Mingxuan Wang and Lei Li},
   booktitle = {the 59th Annual Meeting of the Association for Computational Linguistics (ACL)},
