--- a/leili.bib
+++ b/leili.bib
@@ -1,5 +1,13 @@
 % Encoding: UTF-8
 
+@InProceedings{shi2021proximal,
+  author    = {Wenxian Shi and Yuxuan Song and Bohan Li and Hao Zhou and Lei Li},
+  booktitle = {ECML-PKDD},
+  title     = {Proximal Knowledge Teaching for Neural Networks},
+  year      = {2021},
+  month     = sep,
+}
+
 @InProceedings{lin2021learning,
   author    = {Zehui Lin and Liwei Wu and Mingxuan Wang and Lei Li},
   booktitle = {the 59th Annual Meeting of the Association for Computational Linguistics (ACL)},
