adding nlpcc cnewsum

--- a/leili.bib
+++ b/leili.bib
@@ -1,9 +1,8 @@
 % Encoding: UTF-8
 
-
 @InProceedings{shi2021proximal,
   author    = {Wenxian Shi and Yuxuan Song and Bohan Li and Hao Zhou and Lei Li},
-  booktitle = {ECML-PKDD},
+  booktitle = {Proc. of ECML-PKDD},
   title     = {Proximal Knowledge Teaching for Neural Networks},
   year      = {2021},
   month     = sep,
@@ -16,6 +15,16 @@
   year      = {2021},
   month     = aug,
   eprint    = {https://arxiv.org/abs/2104.10380},
+}
+
+@InProceedings{wang2021cnewsum,
+  author    = {Danqing Wang and Jiaze Chen and Xianze Wu and Hao Zhou and Lei Li},
+  booktitle = {The 10th CCF International Conference on Natural Language Processing and Chinese Computing (NLPCC)},
+  title     = {{CNewSum}: A Large-scale Chinese News Summarization Dataset with Human-annotated Adequacy and Deducibility Level},
+  year      = {2021},
+  address   = {Qingdao, China},
+  month     = aug,
+  url       = {https://dqwang122.github.io/projects/CNewSum/},
 }
 
 @InProceedings{lin2021learning,
