--- a/leili.bib
+++ b/leili.bib
@@ -1,5 +1,33 @@
 % Encoding: UTF-8
 
+@InProceedings{wang2021cnewsum,
+  author    = {Danqing Wang and Jiaze Chen and Xianze Wu and Hao Zhou and Lei Li},
+  booktitle = {The 10th CCF International Conference on Natural Language Processing and Chinese Computing (NLPCC)},
+  title     = {{CNewSum}: A Large-scale Chinese News Summarization Dataset with Human-annotated Adequacy and Deducibility Level},
+  year      = {2021},
+  address   = {Qingdao, China},
+  month     = oct,
+  url       = {https://dqwang122.github.io/projects/CNewSum/},
+}
+
+@InProceedings{li2021learning,
+  author    = {Yunfei Li and Tao Kong and Lei Li and Yifeng Li and Yi Wu},
+  booktitle = {IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+  title     = {Learning to Design and Construct Bridge without Blueprint},
+  year      = {2021},
+  month     = sep,
+  eprint    = {https://arxiv.org/abs/2108.02439},
+}
+
+@InProceedings{li2021simultaneous,
+  author    = {Yiming Li and Tao Kong and Ruihang Chu and Yifeng Li and Peng Wang and Lei Li},
+  booktitle = {IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+  title     = {Simultaneous Semantic and Collision Learning for 6-DoF Grasp Pose Estimation},
+  year      = {2021},
+  month     = sep,
+  eprint    = {https://arxiv.org/abs/2108.02425},
+}
+
 @InProceedings{shi2021proximal,
   author    = {Wenxian Shi and Yuxuan Song and Bohan Li and Hao Zhou and Lei Li},
   booktitle = {Proc. of ECML-PKDD},
@@ -14,17 +42,8 @@
   title     = {End-to-end Speech Translation via Cross-modal Progressive Training},
   year      = {2021},
   month     = aug,
+  code      = {https://github.com/ReneeYe/XSTNet},
   eprint    = {https://arxiv.org/abs/2104.10380},
-}
-
-@InProceedings{wang2021cnewsum,
-  author    = {Danqing Wang and Jiaze Chen and Xianze Wu and Hao Zhou and Lei Li},
-  booktitle = {The 10th CCF International Conference on Natural Language Processing and Chinese Computing (NLPCC)},
-  title     = {{CNewSum}: A Large-scale Chinese News Summarization Dataset with Human-annotated Adequacy and Deducibility Level},
-  year      = {2021},
-  address   = {Qingdao, China},
-  month     = aug,
-  url       = {https://dqwang122.github.io/projects/CNewSum/},
 }
 
 @InProceedings{lin2021learning,
@@ -47,7 +66,11 @@
   month     = aug,
   code      = {https://github.com/PANXiao1994/mRASP2},
   eprint    = {https://arxiv.org/abs/2105.09501},
+  slides    = {pubs/mRASP2_ACL2021.pdf},
+  thumbnail = {lin2020pre_mrasp_diagram.png},
   timestamp = {2020-05-01},
+  url       = {https://medium.com/@panxiao1994/mrasp2-multilingual-nmt-advances-via-contrastive-learning-ac8c4c35d63},
+  video     = {https://underline.io/lecture/25372-contrastive-learning-for-many-to-many-multilingual-neural-machine-translation},
 }
 
 @InProceedings{qian2021glancing,
@@ -66,6 +89,7 @@
   title     = {UniRE: A Unified Label Space for Entity Relation Extraction},
   year      = {2021},
   month     = aug,
+  eprint    = {https://arxiv.org/abs/2107.04292},
   timestamp = {2020-05-01},
 }
 
@@ -89,6 +113,8 @@
   code      = {https://github.com/Jingjing-NLP/VOLT},
   eprint    = {https://arxiv.org/abs/2012.15671},
   timestamp = {2020-05-01},
+  url       = {https://jingjing-nlp.github.io/volt-blog/},
+  video     = {https://underline.io/lecture/25691-vocabulary-learning-via-optimal-transport-for-neural-machine-translation},
 }
 
 @InProceedings{han2021learning,
@@ -100,6 +126,7 @@
   code      = {https://github.com/Glaciohound/Chimera-ST},
   eprint    = {https://arxiv.org/abs/2105.03095},
   timestamp = {2020-05-01},
+  video     = {https://www.youtube.com/watch?v=jkrl0gjVIyQ},
 }
 
 @InProceedings{sun2021probabilistic,
@@ -1795,13 +1822,6 @@ clickbait detection and generic text classification tasks demonstrate that our p
   author = {Hongxiao Bai and Mingxuan Wang and Hai Zhao and Lei Li},
   title  = {Self-Training with Heterogeneous Teachers Improves Neural Machine Translation},
   year   = {Draft},
-}
-
-@Unpublished{bai2020triangular,
-  author   = {Hongxiao Bai and Mingxuan Wang and Hai Zhao and Lei Li},
-  title    = {Triangular Unsupervised Neural Machine Translation},
-  year     = {Draft},
-  addendum = {in submission},
 }
 
 @Unpublished{bao2020pnat,
