adding nlpcc papers

--- a/leili.bib
+++ b/leili.bib
@@ -67,7 +67,6 @@
   code      = {https://github.com/PANXiao1994/mRASP2},
   eprint    = {https://arxiv.org/abs/2105.09501},
   slides    = {pubs/mRASP2_ACL2021.pdf},
-  thumbnail = {lin2020pre_mrasp_diagram.png},
   timestamp = {2020-05-01},
   url       = {https://medium.com/@panxiao1994/mrasp2-multilingual-nmt-advances-via-contrastive-learning-ac8c4c35d63},
   video     = {https://underline.io/lecture/25372-contrastive-learning-for-many-to-many-multilingual-neural-machine-translation},
@@ -79,6 +78,7 @@
   title     = {Glancing Transformer for Non-Autoregressive Neural Machine Translation},
   year      = {2021},
   month     = aug,
+  comment   = {The main algorithm that achieves top 1 BLEU scores in WMT21 En-De and De-En machine translation contest.},
   eprint    = {https://arxiv.org/abs/2008.07905},
   timestamp = {2020-05-01},
 }
@@ -136,6 +136,7 @@
   year      = {2021},
   month     = aug,
   code      = {https://github.com/changzhisun/PRobr/},
+  eprint    = {https://arxiv.org/abs/2107.02418},
   timestamp = {2020-05-01},
 }
 
@@ -145,6 +146,7 @@
   title     = {Contrastive Aligned Joint Learning for Multilingual Summarization},
   year      = {2021},
   month     = aug,
+  code      = {https://github.com/dqwang122/CALMS},
   timestamp = {2020-05-01},
 }
 
@@ -154,6 +156,7 @@
   title     = {Language Tags Matter for Zero-Shot Neural Machine Translation},
   year      = {2021},
   month     = aug,
+  eprint    = {https://arxiv.org/abs/2106.07930},
   timestamp = {2020-05-01},
 }
 
@@ -175,6 +178,7 @@
   title     = {Adversarial Option-Aware Hierarchical Imitation Learning},
   year      = {2021},
   month     = jul,
+  eprint    = {https://arxiv.org/abs/2106.05530},
 }
 
 @InProceedings{long2021generative,
@@ -247,6 +251,8 @@
   title     = {Scale-aware Automatic Augmentation for Object Detection},
   year      = {2021},
   month     = jun,
+  code      = {https://github.com/dvlab-research/SA-AutoAug},
+  eprint    = {https://arxiv.org/abs/2103.17220},
   owner     = {lilei.02},
 }
 
@@ -256,6 +262,7 @@
   title     = {Locate then Segment: A Strong Pipeline for Referring Image Segmentation},
   year      = {2021},
   month     = jun,
+  eprint    = {https://arxiv.org/abs/2103.16284},
   owner     = {lilei.02},
 }
 
@@ -408,6 +415,7 @@
   title     = {Consecutive Decoding for Speech-to-text Translation},
   year      = {2021},
   month     = feb,
+  code      = {https://github.com/dqqcasia/st},
   eprint    = {https://arxiv.org/abs/2009.09737},
   owner     = {lilei.02},
   url       = {https://dqqcasia.github.io/projects/COSTT/},
@@ -419,6 +427,7 @@
   title     = {Listen, Understand and Translate: Triple Supervision Decouples End-to-end Speech-to-text Translation},
   year      = {2021},
   month     = feb,
+  code      = {https://github.com/dqqcasia/st},
   eprint    = {https://arxiv.org/abs/2009.09704},
   owner     = {lilei.02},
   url       = {https://dqqcasia.github.io/projects/LUT/},
