--- a/leili.bib
+++ b/leili.bib
@@ -1252,6 +1252,14 @@ is released at https://github.com/NingMiao/CGMH},
   owner     = {lilei.02},
 }
 
+@InProceedings{li2018overview,
+  author    = {Lei Li and Xiaojun Wan},
+  booktitle = {Proc. of NLPCC},
+  title     = {Overview of the NLPCC 2018 shared task: Single document summarization},
+  year      = {2018},
+  month     = oct,
+}
+
 @InProceedings{li2018jersey,
   author       = {Li, Gen and Xu, Shikun and Liu, Xiang and Li, Lei and Wang, Changhu},
   booktitle    = {IEEE Conference on Computer Vision and Pattern Recognition workshops, Computer Vision in Sports},
@@ -1292,6 +1300,14 @@ clickbait detection and generic text classification tasks demonstrate that our p
   eprint    = {http://arxiv.org/abs/1804.06035},
   location  = {New Orleans, Louisiana},
   timestamp = {2018-05-07T10:09:16.000+0200},
+}
+
+@InProceedings{hua2017overview,
+  author    = {Lifeng Hua and Xiaojun Wan and Lei Li},
+  booktitle = {Proc. of NLPCC},
+  title     = {Overview of the NLPCC 2017 shared task: Single document summarization},
+  year      = {2017},
+  month     = oct,
 }
 
 @InProceedings{erol2017nearly,
