adding mt course and tpami2021 paper

--- a/leili.bib
+++ b/leili.bib
@@ -7,6 +7,15 @@
   year    = {2021},
 }
 
+@Article{wang2021solo,
+  author  = {Xinlong Wang and Rufeng Zhang and Chunhua Shen and Tao Kong and Lei Li},
+  journal = {TPAMI},
+  title   = {SOLO: A Simple Framework for Instance Segmentation},
+  year    = {2021},
+  code    = {https://github.com/aim-uofa/AdelaiDet/},
+  eprint  = {https://arxiv.org/abs/2106.15947},
+}
+
 @InProceedings{wang2021cnewsum,
   author    = {Danqing Wang and Jiaze Chen and Xianze Wu and Hao Zhou and Lei Li},
   booktitle = {The 10th CCF International Conference on Natural Language Processing and Chinese Computing (NLPCC)},
