fix teaching research and resource

--- a/leili.bib
+++ b/leili.bib
@@ -3,13 +3,13 @@
 @Article{chu2021icm,
   author  = {Ruihang Chu and Yukang Chen and Tao Kong and Lu Qi and Lei Li},
   journal = {IEEE Robotics and Automation Letters (RA-L)},
-  title   = {{ICM-3D}: Instantiated Category MOdeling for 3D Instance Segmentation},
+  title   = {{ICM-3D}: Instantiated Category Modeling for 3D Instance Segmentation},
   year    = {2021},
 }
 
 @Article{wang2021solo,
   author  = {Xinlong Wang and Rufeng Zhang and Chunhua Shen and Tao Kong and Lei Li},
-  journal = {TPAMI},
+  journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)},
   title   = {SOLO: A Simple Framework for Instance Segmentation},
   year    = {2021},
   code    = {https://github.com/aim-uofa/AdelaiDet/},
