--- a/leili.bib
+++ b/leili.bib
@@ -5,6 +5,7 @@
   journal = {IEEE Robotics and Automation Letters (RA-L)},
   title   = {{ICM-3D}: Instantiated Category Modeling for 3D Instance Segmentation},
   year    = {2021},
+  eprint  = {https://arxiv.org/abs/2108.11771},
 }
 
 @Article{wang2021solo,
@@ -14,6 +15,66 @@
   year    = {2021},
   code    = {https://github.com/aim-uofa/AdelaiDet/},
   eprint  = {https://arxiv.org/abs/2106.15947},
+}
+
+@InProceedings{jiang2021learning,
+  author    = {Qingnan Jiang and Mingxuan Wang and Jun Cao and Shanbo Cheng and Shujian Huang and Lei Li},
+  booktitle = {the Conference on Empirical Methods in Natural Language Processing (EMNLP)},
+  title     = {Learning Kernel-Smoothed Machine Translation with Retrieved Examples},
+  year      = {2021},
+  month     = nov,
+  abstract  = {How to effectively adapt neural machine translation  (NMT)  models  according  to  emergingcases  without  retraining?    Despite  the  greatsuccess  of  neural  machine  translation,  updating the deployed models online remains a challenge. Existing  non-parametric  approachesthat retrieve similar examples from a databaseto guide the translation process are promisingbut are prone to overfit the retrieved examples. However,  non-parametric  methods  are  proneto overfit the retrieved examples. In this work,we propose to learn Kernel-Smoothed Translation with Example Retrieval (KSTER), an effective approach to adapt neural machine translation models online.  Experiments on domainadaptation and multi-domain machine translation  datasets  show  that  even  without  expensive retraining, KSTER is able to achieve im-provement  of  1.1  to  1.5  BLEU  scores  overthe  best  existing  online  adaptation  methods. The  code  and  trained  models  are  released  at https://github.com/jiangqn/KSTER.},
+  code      = {https://github.com/jiangqn/KSTER},
+}
+
+@InProceedings{ru2021learning,
+  author    = {Dongyu Ru and Changzhi Sun and Jiangtao Feng and Lin Qiu and Hao Zhou and Weinan Zhang and Yong Yu and Lei Li},
+  booktitle = {the Conference on Empirical Methods in Natural Language Processing (EMNLP)},
+  title     = {Learning Logic Rules for Document-level Relation Extraction},
+  year      = {2021},
+  month     = nov,
+  abstract  = {Document-level relation extraction aims to identify relations between entities in a whole document. Prior efforts to capture long-range dependencies have relied heavily on implicitly powerful representations learned through (graph) neural networks, which makes the model less transparent. To tackle this challenge, in this paper, we propose LogiRE, a novel probabilistic model for document-level relation extraction by learning logic rules. LogiRE treats logic rules as latent variables and consists of two modules: a rule generator and a relation extractor. The rule generator is to generate logic rules potentially contributing to final predictions, and the relation extractor outputs final predictions based on the generated logic rules. Those two modules can be efficiently optimized with the expectation--maximization (EM) algorithm. By introducing logic rules into neural networks, LogiRE can explicitly capture long-range dependencies as well as enjoy better interpretation. Empirical results show that LogiRE significantly outperforms several strong baselines in terms of relation performance (∼1.8 F1 score) and logical consistency (over 3.3 logic score). Our code is available at https://github. com/rudongyu/LogiRE.},
+}
+
+@InProceedings{zeng2021gradient,
+  author    = {Zhiyuan Zeng and Jiaze Chen and Weiran Xu and Lei Li},
+  booktitle = {the Conference on Empirical Methods in Natural Language Processing (EMNLP)},
+  title     = {Gradient-based Adversarial Factual Consistency Evaluation for Abstractive Summarization},
+  year      = {2021},
+  month     = nov,
+  code      = {https://github.com/parZival27/GrAdualCC},
+}
+
+@InProceedings{sun2021multilingual,
+  author    = {Zewei Sun and Mingxuan Wang and Lei Li},
+  booktitle = {the Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings},
+  title     = {Multilingual Translation via Grafting Pre-trained Language Models},
+  year      = {2021},
+  month     = nov,
+  code      = {https://github.com/sunzewei2715/Graformer},
+}
+
+@InProceedings{wang2021secoco,
+  author    = {Tao Wang and Chengqi Zhao and Mingxuan Wang and Lei Li and Hang Li and Deyi Xiong},
+  booktitle = {the Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings},
+  title     = {Secoco: Self-Correcting Encoding for Neural Machine Translation},
+  year      = {2021},
+  month     = nov,
+  abstract  = {Different from previous robust approaches, Secoco enables NMT to explicitly correct noisy inputs and delete specific errors simultaneously with the translation decoding process. Secoco is able to achieve significant improvements of 1.6 BLEU points over strong baselines on two real-world test sets and a benchmark WMT dataset  with good interpretability.
+The code and dataset are publicly available at \url{https://github.com/rgwt123/Secoco}.},
+  code      = {https://github.com/rgwt123/Secoco},
+  eprint    = {https://arxiv.org/abs/2108.12137},
+}
+
+@InProceedings{zhu2021counter,
+  author    = {Yaoming Zhu and Jiangtao Feng and Chengqi Zhao and Mingxuan Wang and Lei Li},
+  booktitle = {the Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings},
+  title     = {Counter-Interference Adapter for Multilingual Machine Translation},
+  year      = {2021},
+  month     = nov,
+  abstract  = {Developing  a  unified  multilingual  model  haslong  been  a  pursuit  for  machine  translation. However, existing approaches suffer from performance degradation — a single multilingualmodel  is  inferior  to  separately  trained  bilingual ones on rich-resource languages. We conjecture  that such  a phenomenon  is due  to interference  caused  by  joint  training  with  multiple  languages.   To  accommodate  the  issue,we  propose  CIAT,  an  adapted  Transformermodel  with  a  small  parameter  overhead  formultilingual  machine  translation.   We  evaluate CIAT on multiple benchmark datasets, including  IWSLT,  OPUS-100,  and  WMT.  Experiments  show  that  CIAT  consistently  outperforms strong multilingual baselines on 64 of  total  66  language  directions,  42  of  whichsee  above  0.5  BLEU  improvement. Our code  is  available  at https://github.com/Yaoming95/CIAT.},
+  code      = {https://github.com/Yaoming95/CIAT},
+  eprint    = {https://arxiv.org/abs/2104.08154},
 }
 
 @InProceedings{wang2021cnewsum,
@@ -214,7 +275,7 @@
   timestamp = {2021-03-11},
 }
 
-@InProceedings{wang2021auto,
+@InProceedings{wang2021autocorrect,
   author    = {Wang, Tao and Zhao, Chengqi and Wang, Mingxuan and Li, Lei and Xiong, Deyi},
   booktitle = {Proceedings of the 2021 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies: Industry Papers (NAACL-HLT)},
   title     = {Autocorrect in the Process of Translation {---} Multi-task Learning Improves Dialogue Machine Translation},
@@ -1859,38 +1920,38 @@ clickbait detection and generic text classification tasks demonstrate that our p
   file      = {:pubs/li2006providing - Providing an Uncertainty Reasoning Service for Semantic Web Application.pdf:PDF},
 }
 
-@Unpublished{bai2020self,
+@Unpublished{baiDraftself,
   author = {Hongxiao Bai and Mingxuan Wang and Hai Zhao and Lei Li},
   title  = {Self-Training with Heterogeneous Teachers Improves Neural Machine Translation},
   year   = {Draft},
 }
 
-@Unpublished{bao2020pnat,
+@Unpublished{baoDraftpnat,
   author = {Yu Bao and Hao Zhou and Jiangtao Feng and Mingxuan Wang and Shujian Huang and Jiajun Chen and Lei Li},
   note   = {in submission},
   title  = {{PNAT}: Non-autoregressive Transformer by Position Learning},
   year   = {Draft},
 }
 
-@Unpublished{li2020bidirectional,
+@Unpublished{liDraftbidirectional,
   author = {Mingwei Li and Qingyuan Jiang and Yi He and Lei Li and Wujun Li},
   title  = {Bidirectional Attentive Convolutional Neural Network for Near-Duplicate Video Retrieval},
   year   = {Draft},
 }
 
-@Unpublished{sun2020diving,
+@Unpublished{sunDraftdiving,
   author = {Zewei Sun and Mingxuan Wang and Hao Zhou and Chengqi Zhao and Shujian Huang and Jiajun Chen and Lei Li},
   title  = {Diving into Document-Level Neural Machine Translation},
   year   = {Draft},
 }
 
-@Unpublished{tian2020conversational,
+@Unpublished{tianDraftconversational,
   author = {Youzhi Tian and Zhou Yu and Cheng Yang and Hang Li and Lei Li},
   title  = {Conversational Contextualized Multimodal Representation Learning},
   year   = {Draft},
 }
 
-@Unpublished{yan2020cross,
+@Unpublished{yanDraftcross,
   author = {An Yan and Xin Wang and Jiangtao Feng and Lei Li and William Yang Wang},
   title  = {Cross-Lingual Vision-Language Navigation},
   year   = {Draft},
