updating course DL4MT

--- a/leili.bib
+++ b/leili.bib
@@ -25,6 +25,7 @@
   month     = nov,
   abstract  = {How to effectively adapt neural machine translation  (NMT)  models  according  to  emergingcases  without  retraining?    Despite  the  greatsuccess  of  neural  machine  translation,  updating the deployed models online remains a challenge. Existing  non-parametric  approachesthat retrieve similar examples from a databaseto guide the translation process are promisingbut are prone to overfit the retrieved examples. However,  non-parametric  methods  are  proneto overfit the retrieved examples. In this work,we propose to learn Kernel-Smoothed Translation with Example Retrieval (KSTER), an effective approach to adapt neural machine translation models online.  Experiments on domainadaptation and multi-domain machine translation  datasets  show  that  even  without  expensive retraining, KSTER is able to achieve im-provement  of  1.1  to  1.5  BLEU  scores  overthe  best  existing  online  adaptation  methods. The  code  and  trained  models  are  released  at https://github.com/jiangqn/KSTER.},
   code      = {https://github.com/jiangqn/KSTER},
+  eprint    = {https://arxiv.org/abs/2109.09991},
 }
 
 @InProceedings{ru2021learning,
@@ -53,6 +54,7 @@
   year      = {2021},
   month     = nov,
   code      = {https://github.com/sunzewei2715/Graformer},
+  eprint    = {https://arxiv.org/abs/2109.05256},
 }
 
 @InProceedings{wang2021secoco,
